--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,34 @@ body {
     justify-content: flex-start;
     align-items: center;
   }
+
+html {
+    scroll-behavior: smooth;
+}
+
+.nav-list {
+    list-style: none;
+}
+
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    font-size: 1.1em;
+    color: navy;
+    transition: 0.3s;
+}
+
+.nav-link:hover {
+    background: forestgreen;
+    color: antiquewhite;
+}
+
+.main-container{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.container{
+    width: 50%
+}
