--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
   }
 
 * {
@@ -32,28 +33,24 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    list-style: none;
   }
 
 html {
     scroll-behavior: smooth;
 }
 
-.nav-list {
-    list-style: none;
-}
-
 .nav-link {
     padding: 0 20px;
     line-height: 50px;
     text-decoration: none;
-    font-size: 1.1em;
-    color: navy;
+    font-size: 18px;
+    color: #EDF4E4;
     transition: 0.3s;
 }
 
 .nav-link:hover {
-    background: forestgreen;
-    color: antiquewhite;
+    background: grey;
 }
 
 .main-container{
@@ -61,6 +58,46 @@ html {
     flex-wrap:wrap;
 }
 
-.container{
-    width: 50%
+.section{
+    width: 50%;
+    font-size: 16px;
+    text-align: left;
+    border-bottom: 1px solid rgb(23, 87, 35);
+}
+
+.section-title.my-photo,
+.profession {
+    text-align: center;
+    font-size: 20px;
+}
+
+.photo {
+   float: right;
+}
+
+#profile {
+    width: 80%;
+    border-bottom: none;
+}
+
+.section-title {
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #000;
+}
+
+.header {
+    background-color: #6DAB27;
+}
+
+.link:hover {
+    color: brown;
+}
+
+@media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
 }
