--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
     src: url("assets/fonts/Roboto/RobotoRegular.ttf");
     font-weight: 300;
   }
-
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     .section {
       width: 100%;
+      
     }
 }
 
@@ -33,6 +33,7 @@ body {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 10px;
   }
 
 .nav-list {
@@ -82,8 +83,9 @@ html {
 }
 
 #profile {
-    width: 80%;
+    width:80%;
     border-bottom: none;
+    padding-top: 10px;
 }
 
 .section-title {
