--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,132 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/Roboto/RobotoThin.ttf");
-    font-weight: 100;
-  }
+ font-family: 'Roboto';
+ src: url("assets/fonts/Roboto/RobotoThin.ttf");
+ font-weight: 100;
+}
+
 @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/Roboto/RobotoRegular.ttf");
-    font-weight: 300;
-  }
+ font-family: 'Roboto';
+ src: url("assets/fonts/Roboto/RobotoRegular.ttf");
+ font-weight: 300;
+}
+
 @media (max-width: 768px) {
     .section {
       width: 100%;
-      
     }
 }
 
 body {
-    margin:0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
-  }
+ margin: 0;
+ padding: 0;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ min-height: 100vh;
+
+ font-family: 'Roboto', sans-serif;
+ line-height: 1.5;
+}
 
 * {
-    box-sizing: border-box;
-  }
+ box-sizing: border-box;
+}
 
 .container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 10px;
-  }
+ max-width: 1440px;
+ margin: 0 auto;
+ padding: 10px;
+}
 
 .nav-list {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    list-style: none;
-  }
+ display: flex;
+ justify-content: flex-start;
+ align-items: center;
+
+ list-style: none;
+}
 
 html {
-    scroll-behavior: smooth;
+ scroll-behavior: smooth;
 }
 
 .nav-link {
-    padding: 0 20px;
-    line-height: 50px;
-    text-decoration: none;
-    font-size: 18px;
-    color: #EDF4E4;
-    transition: 0.3s;
+ padding: 0 20px;
+ line-height: 50px;
+ text-decoration: none;
+ font-size: 18px;
+ color: #EDF4E4;
+
+ transition: 0.3s;
 }
 
 .nav-link:hover {
-    background: grey;
+ background: grey;
 }
 
 .main-container{
-    display:flex;
-    flex-wrap:wrap;
+ display:flex;
+ flex-wrap:wrap;
 }
 
 .section{
-    width: 50%;
-    font-size: 16px;
-    text-align: left;
-    border-bottom: 1px solid rgb(23, 87, 35);
+ width: 50%;
+
+ font-size: 16px;
+ text-align: left;
+
+ border-bottom: 1px solid rgb(23, 87, 35);
 }
 
-.section-title.my-photo,
+.section-title.my-name,
 .profession {
-    text-align: center;
-    font-size: 20px;
+ text-align: center;
+ font-size: 20px;
 }
 
 .photo {
-   float: right;
+ float: right;
+ width: 200px;
+ height: auto;
+}
+
+.logo-image {
+ width: 100px;
+ height: auto;
 }
 
 #profile {
-    width:80%;
-    border-bottom: none;
-    padding-top: 10px;
+ width:80%;
+ padding-top: 10px;
+
+ border-bottom: none;
 }
 
 .section-title {
-    font-size: 16px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #000;
+ font-size: 16px;
+ font-weight: 600;
+ text-transform: uppercase;
+ letter-spacing: 1px;
+ color: #000;
 }
 
 .header {
-    background-color: #6DAB27;
+ background-color: #6DAB27;
 }
 
 .link:hover {
-    color: brown;
+ color: brown;
 }
 
 footer {
-    background-color: #6DAB27;
+ background-color: #6DAB27;
 }
 
 .logo {
-    float:right;
+ float:right;
 }
 
 #education,
 #languages {
-    border-bottom: none;
+ border-bottom: none;
 }
